--- a/views/notes-form.ejs
+++ b/views/notes-form.ejs
@@ -9,10 +9,10 @@
 
 <body>
     <section>
-        <form method="POST" action="/notes">
+        <form method="POST" target="/notes">
             <div>
                 <label for="title">Título</label> <br>
-                <input id="title" name="title" />
+                <input id="title" name="title" maxlength="50" />
             </div>
             <div>
                 <label for="note">Contenido</label><br>
