--- a/views/notes-form.ejs
+++ b/views/notes-form.ejs
@@ -9,7 +9,7 @@
 
 <body>
     <section>
-        <form method="POST" target="/notes">
+        <form method="POST" action="/notes">
             <div>
                 <label for="title">Título</label> <br>
                 <input id="title" name="title" maxlength="50" />
